<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.codigomenuaula08.MainActivity">
    <item
        android:id="@+id/op_tamanho"
        android:title="@string/texto"/>
    <item
        android:id="@+id/op_cores"
        android:title="@string/cores">
        <menu>
            <item
                android:id="@+id/op_corTexto"
                android:title="@string/corFonte"/>
            <item
                android:id="@+id/op_corTela"
                android:title="@string/corTela"/>
        </menu>
    </item>
    <item
        android:id="@+id/op_abrir"
        android:title="@string/abrir"/>
    <item
        android:id="@+id/op_sair"
        android:title="@string/sair"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        app:showAsAction="always"/>
</menu>
